# SDL2_texture_manager

./: CMakeLists.txt  README.md
include/: SDL2_texture_manager.hpp
test/: test.cpp
